--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -7,7 +7,7 @@ license = "All rights reserved"
 modId = "onlinedisplays"
 version = "${file.jarVersion}"
 displayName = "Online Displays"
-updateJSONURL = "http://dccg.herokuapp.com/api/fmluc/785509"
+updateJSONURL = "https://api.modrinth.com/updates/bhEwCNbH/forge_updates.json"
 displayURL = "http://dccg.herokuapp.com/api/fmlhp/785509"
 authors = "Zeitheron"
 logoFile = "display_logo.png"
@@ -35,6 +35,6 @@ side = "BOTH"
 [[dependencies.onlinedisplays]]
 modId = "hammerlib"
 mandatory = true
-versionRange = "[19.3.51,)"
+versionRange = "[19.3.56,)"
 ordering = "NONE"
 side = "BOTH"
